fixed nav links alignment

--- a/src/App.css
+++ b/src/App.css
@@ -108,7 +108,6 @@ h1 {
 }
 
 nav{
-  display: flex;
   position: fixed;
   top:0;
   width: 100%;
